# newExplorer-AIOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: err.h  list.h  types.h
source/: tensor.c  tensor.h  tensor_init.c  tensor_ops.h  tensor_struct.h  tensor_util.c
standalone/source/: main.c
